--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dependencies": {
         "@actions/core": "1.2.0",
         "axios": "0.19.0",
+        "files-from-path": "^0.2.6",
         "isarray": "1.0.0",
         "jest": "24.9.0",
         "prompts": "2.3.0"
